# oceanfla

./: CONTRIBUTING.md  README.md  pyproject.toml
oceanfla/: config.py  oceanparse.py  parser.py  run.py  run_glm.py  utilities.py  workflows.py
oceanfla/interfaces/: clean.py  events.py  exclusions.py  nuisance.py  regression.py  reporting.py  tmask.py  utility.py  workbench_utils.py
oceanfla/interfaces/tests/: conftest.py  test_filter.py  test_nuisance.py  test_tmask.py
oceanfla/interfaces/tests/data/: confounds.tsv
oceanfla/postfla/: parser.py
oceanfla/resources/: bids_paths.json
oceanfla/tests/: test_run_glm.py
